# dynamic-rim-module

./: .pre-commit-config.yaml  CHANGES.rst  README.rst  setup.cfg  tox.ini
.github/workflows/: main.yml
docs/: index.rst
src/pupil_labs/dynamic_content_on_rim/: __init__.py  dyn-rim.py  dyn_rim.py  dynamic_rim.py  parser.py  requirements-dyn-rim.txt  requirements.txt
src/pupil_labs/dynamic_content_on_rim/recording/: recording.py
src/pupil_labs/dynamic_content_on_rim/uitools/: get_corners.py  ui_tools.py
src/pupil_labs/dynamic_content_on_rim/video/: read.py
tests/: test_api.py
