[metadata]
name = pupil_labs_dynamic_rim
description = A project to remap gaze on a sub ROI/AOI in the reference image mapping, to be used with displays with dynamic content.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/dynamic-content-on-rim
author = Pupil Labs GmbH
author_email = mgg@pupil-labs.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
install_requires =
    Pillow
    av
    numpy
    opencv-python
    pandas
python_requires = >= 3.8, < 3.11
include_package_data = true
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.entry_points]
console_scripts =
    pl-dynrim = pupil_labs.dynamic_content_on_rim.dyn_rim:main

[options.extras_require]
docs =
    jaraco.packaging>=9
    rst.linker>=1.9
    sphinx
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.3
    pytest-mypy>=0.9.1;python_implementation != "PyPy"
